feat 支持使用通用资源获取接口获取视频信息和字幕信息